<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/drake_lost"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingBottom="10dp"
                    android:text="@string/you_lost"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="11dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                app:layout_constraintLeft_toRightOf="@id/cancel"
                app:layout_constraintRight_toRightOf="parent"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/exit"
                app:layout_constraintRight_toLeftOf="@+id/again"
                app:layout_constraintTop_toBottomOf="@id/linearlayout1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>