<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:fontFamily="cursive"
        android:text="@string/rock_paper_scissor"
        android:background="@drawable/heading"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:shadowColor="@color/purple_200"
        android:shadowDx="8"
        android:shadowDy="6"
        android:shadowRadius="10"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="480dp"
        android:background="@drawable/mybutton"
        android:text="@string/reset"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="415dp"
        android:hint="0"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
         />

    <TextView
        android:id="@+id/ai_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="415dp"
        android:hint="0"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
        app:layout_constraintVertical_bias="0.511" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middledot"
        app:layout_constraintTop_toBottomOf="@id/resetButton"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toRightOf="@id/your_score"
        app:layout_constraintRight_toLeftOf="@id/ai_score"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="415dp"
        android:text="@string/you"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/your_score"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
         />

    <TextView
        android:id="@+id/AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="415dp"
        android:text="@string/ai"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ai_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
        />

        <TextView
            android:id="@+id/you_chosed"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/your_score"
            android:hint="@string/choose"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:background="@drawable/choosebackground"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="280dp"
            android:layout_marginBottom="60dp"
            />


        <TextView
            android:id="@+id/ai_chosed"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/AI"
            android:hint="@string/choose"
            android:background="@drawable/choosebackground"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@id/result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="280dp"
            android:layout_marginBottom="60dp"
 />

        <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:hint="@string/lost_won_tie"
        android:padding="16dp"
        android:textSize="45sp"
        android:background="@drawable/resultbackground"
        android:textColor="@color/purple_700"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetButton"
            />

    <ImageView
        android:id="@+id/rock"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginStart="38dp"
        android:src="@drawable/rock"
        android:textAlignment="center"
        android:background="#00BCD4"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />


    <ImageView
        android:id="@+id/paper"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:src="@drawable/paper"
        android:background="#8BC34A"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/rock"
        app:layout_constraintRight_toLeftOf="@id/scissor"
        app:layout_constraintTop_toBottomOf="@+id/result"
        />

    <ImageView
        android:id="@+id/scissor"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:src="@drawable/scissors"
        android:background="#F44336"
        android:layout_marginEnd="38dp"
        android:hapticFeedbackEnabled="true"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/paper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"

        />

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="0dp"></nl.dionsegijn.konfetti.xml.KonfettiView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
